Added UserWorkout get route and repo and extra validations
