# src/swagger/swagger-output.json
@@ -774,6 +774,72 @@
         }
       }
     },
+    "/userworkout/all": {
+      "get": {
+        "tags": [
+          "User Workout"
+        ],
+        "description": "Retrieves all user workouts.",
+        "responses": {
+          "200": {
+            "description": "User workouts found."
+          },
+          "404": {
+            "description": "User workouts not found."
+          },
+          "500": {
+            "description": "Internal server error."
+          }
+        }
+      }
+    },
+    "/userworkout/all/relations": {
+      "get": {
+        "tags": [
+          "User Workout"
+        ],
+        "description": "Retrieves all user workouts with relations.",
+        "responses": {
+          "200": {
+            "description": "User workouts found."
+          },
+          "404": {
+            "description": "User workouts not found."
+          },
+          "500": {
+            "description": "Internal server error."
+          }
+        }
+      }
+    },
+    "/userworkout/{uuid}": {
+      "get": {
+        "tags": [
+          "User Workout"
+        ],
+        "description": "Retrieves a user workout by their ID.",
+        "parameters": [
+          {
+            "name": "uuid",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "User workout ID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User workout found."
+          },
+          "404": {
+            "description": "User workout not found."
+          },
+          "500": {
+            "description": "Internal server error."
+          }
+        }
+      }
+    },
     "/workout/delete/{uuid}": {
       "delete": {
         "tags": [
